[fix] corrigindo links, retirada do campo de pesquisa do menu esquerdo, e levels em inglês

--- a/layout/pages/cadastrar_sala.html
+++ b/layout/pages/cadastrar_sala.html
@@ -107,21 +107,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </div>
         </div>
 
-        <!-- search form (Optional) -->
-        <form action="#" method="get" class="sidebar-form">
-          <div class="input-group">
-            <input type="text" name="q" class="form-control" placeholder="Search...">
-            <span class="input-group-btn">
-              <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-              </button>
-            </span>
-          </div>
-        </form>
-        <!-- /.search form -->
 
         <!-- Sidebar Menu -->
         <ul class="sidebar-menu">
-          <li class="header">HEADER</li>
+          <li class="header">Menu</li>
           <!-- Optionally, you can add icons to the links -->
           <li><a href="../index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
           <li class="treeview active">
@@ -161,12 +150,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <section class="content-header">
         <h1>
          Cadastro
-         <small>Painel administrativo</small>
        </h1>
-       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Cadastro</a></li>
-        <li class="active">Here</li>
-      </ol>
+       
     </section>
 
     <!-- Main content -->
