--- a/layout/pages/cadastrar_usuario.html
+++ b/layout/pages/cadastrar_usuario.html
@@ -106,21 +106,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </div>
         </div>
 
-        <!-- search form (Optional) -->
-        <form action="#" method="get" class="sidebar-form">
-          <div class="input-group">
-            <input type="text" name="q" class="form-control" placeholder="Search...">
-            <span class="input-group-btn">
-              <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-              </button>
-            </span>
-          </div>
-        </form>
-        <!-- /.search form -->
+       
 
         <!-- Sidebar Menu -->
         <ul class="sidebar-menu">
-          <li class="header">HEADER</li>
+          <li class="header">Menu</li>
           <!-- Optionally, you can add icons to the links -->
           <li><a href="../index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
           <li class="treeview">
@@ -161,12 +151,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <section class="content-header">
         <h1>
          Cadastro
-         <small>Painel administrativo</small>
        </h1>
-       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Cadastro</a></li>
-        <li class="active">Here</li>
-      </ol>
     </section>
 
     <!-- Main content -->
@@ -191,8 +176,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
               <div class="form-group">
                 <i class="fa fa-expeditedssl" aria-hidden="true"></i>
-                <label for="exampleInputPassword1"> Password </label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="exampleInputPassword1"> Senha </label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
               </div>
 
               <div class="form-group">
@@ -247,7 +232,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <i class="fa fa-file-image-o" aria-hidden="true"></i>
                   <label for="exampleInputFile">Imagem</label>
                   <input type="file" id="exampleInputFile">
-                  <p class="help-block">Example block-level help text here.</p>
                 </div>
               </div>
             </div>
