--- a/layout/pages/sala.html
+++ b/layout/pages/sala.html
@@ -93,21 +93,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
         </div>
       </div>
 
-      <!-- search form (Optional) -->
-      <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-        </div>
-      </form>
-      <!-- /.search form -->
+ 
 
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu">
-        <li class="header">HEADER</li>
+        <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
         <li><a href="../index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
         <li class="treeview active">
@@ -119,6 +109,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </a>
           <ul class="treeview-menu">
             <li class="active"><a href="lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
+               <li>
+                            <a href="cadastrar_sala.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
+                        </li>
           </ul>
         </li>
         <li class="treeview">
@@ -130,7 +123,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </a>
           <ul class="treeview-menu">
             <li><a href="cadastrar_usuario.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a></li>
-          </ul>
+          
+             </ul>
         </li>
       </ul>
       <!-- /.sidebar-menu -->
