--- a/layout/index.html
+++ b/layout/index.html
@@ -91,21 +91,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 </div>
             </div>
 
-            <!-- search form (Optional) -->
-            <form action="#" method="get" class="sidebar-form">
-                <div class="input-group">
-                    <input type="text" name="q" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-              <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-              </button>
-            </span>
-                </div>
-            </form>
+          
             <!-- /.search form -->
 
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
-                <li class="header">HEADER</li>
+                <li class="header">Menu</li>
                 <!-- Optionally, you can add icons to the links -->
                 <li class="active"><a href="index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
                 <li class="treeview">
@@ -118,11 +109,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <ul class="treeview-menu">
                         <li>
                             <a href="pages/lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
-                        <li>
+                       
+                </li>
+                <li>
                             <a href="pages/cadastrar_sala.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
                         </li>
-                    </ul>
-                </li>
+            </ul>
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-user"></i> <span>Usuário</span>
@@ -131,7 +123,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="pages/cadastrar_usuario.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
+                        <li><a href="cadastrar_usuario.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
                         </li>
                     </ul>
                 </li>
@@ -150,10 +142,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 Dashboard
                 <small>Painel administrativo</small>
             </h1>
-            <ol class="breadcrumb">
-                <li><a href="#">Level</a></li>
-                <li class="active">Here</li>
-            </ol>
         </section>
 
         <!-- Main content -->
