--- a/layout/pages/relatorio_salas.html
+++ b/layout/pages/relatorio_salas.html
@@ -92,21 +92,9 @@
         </div>
       </div>
 
-      <!-- search form (Optional) -->
-      <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-          <span class="input-group-btn">
-            <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-            </button>
-          </span>
-        </div>
-      </form>
-      <!-- /.search form -->
-
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu">
-        <li class="header">HEADER</li>
+        <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
         <li><a href="../index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
         <li class="treeview">
@@ -118,6 +106,9 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
+               <li>
+                            <a href="cadastrar_sala.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
+                        </li>
           </ul>
         </li>
         <li class="treeview active">
@@ -144,10 +135,7 @@
       <h1>
         Relátorio de Sala
       </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i>Sala</a></li>
-        <li class="active">Relátorio</li>
-      </ol>
+
     </section>
 
 
