--- a/layout/pages/sala.html
+++ b/layout/pages/sala.html
@@ -344,7 +344,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="col-md-12" style="height: 10px;"></div>
       <div class="modal-footer" style="border-top: 0px">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Confirmar</button>
+        <a href="relatorio_salas.html" title=""><button type="button" class="btn btn-primary" data-dismiss="modal">Confirmar</button></a>
       </div>
         </form>
               </div>
