--- a/mobile/ChavesIME/app/src/main/res/layout/activity_cronograma.xml
+++ b/mobile/ChavesIME/app/src/main/res/layout/activity_cronograma.xml
@@ -19,25 +19,28 @@
     </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/relativeLayout"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@+id/homeToolbar">
+        android:layout_below="@id/homeToolbar"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/background_relative"
+        android:id="@+id/layoutCronograma"
+        android:elevation="7dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/sala"
-            android:id="@+id/textSala"
+            android:id="@+id/reservaTextInfo"
             android:gravity="center_vertical"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignBottom="@+id/ddownSala"
-            android:textSize="25dp" />
+            android:textSize="20dp"
+            android:layout_marginLeft="25dp" />
 
         <Spinner
             android:layout_width="wrap_content"
@@ -46,86 +49,103 @@
             android:spinnerMode="dropdown"
             android:layout_gravity="right"
             android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@+id/textHorario"
+            android:layout_toEndOf="@+id/cronogramaTextHorario"
             android:layout_marginLeft="40dp"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:gravity="end" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="none"
+            android:ems="10"
+            android:id="@+id/cronogramaETData"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/reservaTextInfo"
+            android:layout_alignParentEnd="false"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="end"
+            android:autoText="false"
+            android:editable="false"
+            android:focusable="false"
+            android:clickable="true"
+            android:textIsSelectable="false"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:onClick="showDatePickerDialog"
+            android:layout_marginRight="20dp"
+            android:textSize="22dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/data"
-            android:id="@+id/textData"
+            android:id="@+id/cronogramaTextData"
             android:layout_gravity="left|center_vertical"
             android:gravity="center_vertical"
-            android:textSize="25dp"
-            android:layout_below="@+id/ddownSala"
-            android:layout_marginTop="35dp"
-            android:layout_alignBottom="@+id/editTextData" />
+            android:textSize="20dp"
+            android:layout_below="@+id/reservaTextInfo"
+            android:layout_marginTop="30dp"
+            android:layout_alignBottom="@+id/cronogramaETData"
+            android:layout_marginLeft="25dp" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="none"
             android:ems="10"
-            android:id="@+id/editTextData"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/ddownSala"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="40dp"
-            android:layout_toEndOf="@+id/textHorario"
-            android:layout_marginLeft="40dp"
-            android:gravity="center"
+            android:id="@+id/cronogramaETHorario"
+            android:layout_marginLeft="20dp"
             android:autoText="false"
             android:editable="false"
+            android:focusable="false"
+            android:clickable="true"
+            android:textIsSelectable="false"
             android:textColor="@color/colorPrimary"
-            android:onClick="showDatePickerDialog"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:textSize="22dp"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/cronogramaETData"
+            android:gravity="end"
+            android:inputType="none"
+            android:textStyle="bold"
+            android:onClick="showTimePickerDialog" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/horario"
-            android:id="@+id/textHorario"
+            android:id="@+id/cronogramaTextHorario"
             android:layout_gravity="left"
-            android:layout_below="@+id/textData"
-            android:layout_alignBottom="@+id/ddownHorario"
-            android:layout_marginTop="40dp"
+            android:layout_below="@+id/cronogramaETData"
+            android:layout_marginTop="30dp"
             android:textIsSelectable="true"
-            android:textSize="25dp"
-            android:gravity="center" />
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_marginLeft="25dp"
+            android:layout_alignBottom="@+id/cronogramaETHorario" />
 
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ddownHorario"
-            android:spinnerMode="dropdown"
-            android:layout_toEndOf="@+id/textHorario"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/editTextData"
-            android:layout_marginTop="40dp"
-            android:layout_gravity="right"
-            android:layout_marginLeft="40dp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonBuscarCronograma"
-            android:text="@string/buscarCronograma"
-            android:textColor="@color/white"
-            android:background="@drawable/botao_redondo"
-            android:clickable="false"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentStart="false"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="false"
-            android:layout_below="@+id/textHorario"
-            android:layout_marginTop="40dp"
-            android:onClick="botaoBuscarCronograma"
-            android:minWidth="180dp" />
 
     </RelativeLayout>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonBuscarCronograma"
+        android:text="@string/buscarCronograma"
+        android:textColor="@color/white"
+        android:background="@drawable/botao_redondo"
+        android:clickable="false"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentStart="false"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="false"
+        android:layout_below="@+id/layoutCronograma"
+        android:layout_marginTop="20dp"
+        android:onClick="botaoBuscarCronograma"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp" />
 
 </RelativeLayout>
