--- a/mobile/ChavesIME/app/src/main/res/layout/menu_item.xml
+++ b/mobile/ChavesIME/app/src/main/res/layout/menu_item.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentStart="true"
-    android:padding="10dp">
+    android:layout_height="50dp"
+    android:layout_marginStart="10dp">
 
     <ImageView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.3"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/menuItemImageView"
-        android:src="@android:drawable/ic_menu_my_calendar">
-    </ImageView>
+        android:src="@android:drawable/ic_menu_my_calendar"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        tools:ignore="ContentDescription"/>
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="0.7"
         android:text="Large Text"
         android:id="@+id/menuItemTextView"
         android:gravity="center_vertical"
-        android:textColor="@android:color/black"/>
+        android:textColor="@color/colorPrimary"
+        android:layout_toEndOf="@id/menuItemImageView"
+        android:layout_marginStart="10dp"
+        android:layout_centerVertical="true"/>
 
-</LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/light_gray"/>
+
+</RelativeLayout>
