--- a/mobile/ChavesIME/app/src/main/res/values/styles.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/styles.xml
@@ -9,5 +9,9 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
+    <style name="ToolbarTextSize">
+        <item name="android:textSize">30sp</item>
+        <item name="android:color">#ffffff</item>
+    </style>
 
 </resources>
