--- a/mobile/ChavesIME/app/src/main/res/values/arrays.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/arrays.xml
@@ -4,6 +4,7 @@
         <item>Salas</item>
         <item>Datas</item>
         <item>Cronograma</item>
+        <item>Passar Chave</item>
         <item>Sair</item>
     </string-array>
     <string-array name="menuDrawablesArray">
