Add nome nas telas; Add toolbar e função de voltar; Correção do menu lateral

--- a/mobile/ChavesIME/app/src/main/res/values/arrays.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/arrays.xml
@@ -11,6 +11,7 @@
         <item>home_icon</item>
         <item>calendar_icon</item>
         <item>calendar_icon</item>
+        <item>keys_icon</item>
         <item>exit_icon</item>
     </string-array>
 
