Cria página de buscar salas, visualizar salas, estruturando projeto

--- a/layout/blur-admin/.tmp/serve/index.html
+++ b/layout/blur-admin/.tmp/serve/index.html
@@ -135,6 +135,7 @@
 <script src="app/pages/dashboard/dashboard.module.js"></script>
 <script src="app/pages/form/form.module.js"></script>
 <script src="app/pages/profile/profile.module.js"></script>
+<script src="app/pages/salas/salas.module.js"></script>
 <script src="app/pages/tables/tables.module.js"></script>
 <script src="app/pages/ui/ui.module.js"></script>
 <script src="app/theme/components/components.module.js"></script>
@@ -161,6 +162,7 @@
 <script src="app/theme/theme.service.js"></script>
 <script src="app/pages/profile/ProfileModalCtrl.js"></script>
 <script src="app/pages/profile/ProfilePageCtrl.js"></script>
+<script src="app/pages/salas/SalasPageCtrl.js"></script>
 <script src="app/pages/tables/TablesPageCtrl.js"></script>
 <script src="app/theme/components/toastrLibConfig.js"></script>
 <script src="app/theme/directives/animatedChange.js"></script>
@@ -227,8 +229,8 @@
 <script src="app/theme/filters/image/kameleonImg.js"></script>
 <script src="app/theme/filters/image/profilePicture.js"></script>
 <script src="app/theme/filters/text/removeHtml.js"></script>
-<script src="app/pages/charts/amCharts/barChart/BarChartCtrl.js"></script>
 <script src="app/pages/charts/amCharts/areaChart/AreaChartCtrl.js"></script>
+<script src="app/pages/charts/amCharts/barChart/BarChartCtrl.js"></script>
 <script src="app/pages/charts/amCharts/combinedChart/combinedChartCtrl.js"></script>
 <script src="app/pages/charts/amCharts/funnelChart/FunnelChartCtrl.js"></script>
 <script src="app/pages/charts/amCharts/ganttChart/ganttChartCtrl.js"></script>
