[cod] Criar tela de gerenciamento de devolução de chave em AngularJs

--- a/layout/blur-admin/src/app/pages/dashboard/dashboard.html
+++ b/layout/blur-admin/src/app/pages/dashboard/dashboard.html
@@ -8,6 +8,7 @@
            ba-panel-title="Últimas solicitações de reservas"
            ba-panel-class="medium-panel">
         <dashboard-line-chart></dashboard-line-chart>
+
       </div>
     </div>
   </div>
@@ -15,6 +16,6 @@
        ba-panel
        ba-panel-title="Últimas ocorrências registradas"
        ba-panel-class="medium-panel with-scroll feed-panel">
-    <blur-feed></blur-feed>
+  <!--   <blur-feed></blur-feed> -->
   </div>
 </div>
